--- a/login_page.html
+++ b/login_page.html
@@ -1,34 +1,29 @@
 <html>
-<title>
-	<head>
-	</head>
-</title>
+  <head>
+<link rel="stylesheet" href="Login.css">
+  <title>Log in</title>
+</head>
 
 <body>
-  </div>
+  <div class="main">
 
-  <div class="lulanan">
-    <label for="uname"><b>Username</b></label>
-    <input type="text" placeholder="Enter Username" name="uname" required>
+    <h1 class="shit">Open Minded kaba?</h1>
+    <p class="sign" align="center">Sign in</p>
+    <form class="formshit">
 
-    <label for="psw"><b>Password</b></label>
-    <input type="password" placeholder="Enter Password" name="psw" required>
+      <input class="lagyu" type="text" align="center" placeholder="Username">
 
-    <button type="submit">Login</button>
+      <input class="secret" type="password" align="center" placeholder="Password">
 
-  </div>
-
-  <div class="container" style="background-color:#f1f1f1">
-    <button type="button" class="cancelbtn">Cancel</button>
-    <span class="psw">Forgot <a href="#">password?</a></span>
-  </div>
-</form>
-
-
-
-
+      <a href="Home.html" class="submit" type="button" align="center">Sign in</a>
+          <br>  <br>
+             <a  href="" type="button" class="needshit" >Need Help?</a>    
+             </form>
+    </div>
+     
 </body>
 
-
-
 </html>
+
+
+
