--- a/Home.html
+++ b/Home.html
@@ -35,41 +35,41 @@ Home
 </ul>
 </div><div class="itemcont">
 <div class="box_cat2">
-<img src="C:\Users\suman\Mandie-Sumang_BSC-TRAINEE-EXAM\1.jpg"width="210px"height="110px">
-<img src="C:\Users\suman\Mandie-Sumang_BSC-TRAINEE-EXAM\2.jpg" width="210px"height="110px">
-<img src="C:\Users\suman\Mandie-Sumang_BSC-TRAINEE-EXAM\3.jpg"width="210px"height="110px">
-<img src="C:\Users\suman\Mandie-Sumang_BSC-TRAINEE-EXAM\4.jpg"width="210px" height="110px">
-<img src="C:\Users\suman\Mandie-Sumang_BSC-TRAINEE-EXAM\5.jpg"width="210px" height="110px">
+<img src="..\Mandie-Sumang_BSC-TRAINEE-EXAM\images\1.jpg"width="210px"height="110px">
+<img src="..\Mandie-Sumang_BSC-TRAINEE-EXAM\images\2.jpg" width="210px"height="110px">
+<img src="..\Mandie-Sumang_BSC-TRAINEE-EXAM\images\3.jpg"width="210px"height="110px">
+<img src="..\Mandie-Sumang_BSC-TRAINEE-EXAM\images\4.jpg"width="210px" height="110px">
+<img src="..\Mandie-Sumang_BSC-TRAINEE-EXAM\images\5.jpg"width="210px" height="110px">
 
 
 
 <div>
-<img src="C:\Users\suman\Mandie-Sumang_BSC-TRAINEE-EXAM\1.jpg"width="210px"height="110px">
-<img src="C:\Users\suman\Mandie-Sumang_BSC-TRAINEE-EXAM\2.jpg" width="210px"height="110px">
-<img src="C:\Users\suman\Mandie-Sumang_BSC-TRAINEE-EXAM\3.jpg"width="210px"height="110px">
-<img src="C:\Users\suman\Mandie-Sumang_BSC-TRAINEE-EXAM\4.jpg"width="210px" height="110px">
-<img src="C:\Users\suman\Mandie-Sumang_BSC-TRAINEE-EXAM\5.jpg"width="210px" height="110px">
+<img src="..\Mandie-Sumang_BSC-TRAINEE-EXAM\images\1.jpg"width="210px"height="110px">
+<img src="..\Mandie-Sumang_BSC-TRAINEE-EXAM\images\2.jpg" width="210px"height="110px">
+<img src="..\Mandie-Sumang_BSC-TRAINEE-EXAM\images\3.jpg"width="210px"height="110px">
+<img src="..\Mandie-Sumang_BSC-TRAINEE-EXAM\images\4.jpg"width="210px" height="110px">
+<img src="..\Mandie-Sumang_BSC-TRAINEE-EXAM\images\5.jpg"width="210px" height="110px">
 </div>
 <div>
-<img src="C:\Users\suman\Mandie-Sumang_BSC-TRAINEE-EXAM\11.jpg"width="210px"height="110px">
-<img src="C:\Users\suman\Mandie-Sumang_BSC-TRAINEE-EXAM\22.jpg" width="210px"height="110px">
-<img src="C:\Users\suman\Mandie-Sumang_BSC-TRAINEE-EXAM\33.jpg"width="210px"height="110px">
-<img src="C:\Users\suman\Mandie-Sumang_BSC-TRAINEE-EXAM\44.jpg"width="210px" height="110px">
-<img src="C:\Users\suman\Mandie-Sumang_BSC-TRAINEE-EXAM\55.jpg"width="210px" height="110px">
+<img src="..\Mandie-Sumang_BSC-TRAINEE-EXAM\images\11.jpg"width="210px"height="110px">
+<img src="..\Mandie-Sumang_BSC-TRAINEE-EXAM\images\22.jpg" width="210px"height="110px">
+<img src="..\Mandie-Sumang_BSC-TRAINEE-EXAM\images\33.jpg"width="210px"height="110px">
+<img src="..\Mandie-Sumang_BSC-TRAINEE-EXAM\images\44.jpg"width="210px" height="110px">
+<img src="..\Mandie-Sumang_BSC-TRAINEE-EXAM\images\55.jpg"width="210px" height="110px">
 
 <div>
-<img src="C:\Users\suman\Mandie-Sumang_BSC-TRAINEE-EXAM\111.jpg"width="210px"height="110px">
-<img src="C:\Users\suman\Mandie-Sumang_BSC-TRAINEE-EXAM\222.jpg" width="210px"height="110px">
-<img src="C:\Users\suman\Mandie-Sumang_BSC-TRAINEE-EXAM\333.jpg"width="210px"height="110px">
-<img src="C:\Users\suman\Mandie-Sumang_BSC-TRAINEE-EXAM\444.jpg"width="210px" height="110px">
-<img src="C:\Users\suman\Mandie-Sumang_BSC-TRAINEE-EXAM\555.jpg"width="210px" height="110px">
+<img src="..\Mandie-Sumang_BSC-TRAINEE-EXAM\images\111.jpg"width="210px"height="110px">
+<img src="..\Mandie-Sumang_BSC-TRAINEE-EXAM\images\222.jpg" width="210px"height="110px">
+<img src="..\Mandie-Sumang_BSC-TRAINEE-EXAM\images\333.jpg"width="210px"height="110px">
+<img src="..\Mandie-Sumang_BSC-TRAINEE-EXAM\images\444.jpg"width="210px" height="110px">
+<img src="..\Mandie-Sumang_BSC-TRAINEE-EXAM\images\555.jpg"width="210px" height="110px">
 </div>
 <div>
-<img src="C:\Users\suman\Mandie-Sumang_BSC-TRAINEE-EXAM\1.jpg"width="210px"height="110px">
-<img src="C:\Users\suman\Mandie-Sumang_BSC-TRAINEE-EXAM\2.jpg" width="210px"height="110px">
-<img src="C:\Users\suman\Mandie-Sumang_BSC-TRAINEE-EXAM\3.jpg"width="210px"height="110px">
-<img src="C:\Users\suman\Mandie-Sumang_BSC-TRAINEE-EXAM\4.jpg"width="210px" height="110px">
-<img src="C:\Users\suman\Mandie-Sumang_BSC-TRAINEE-EXAM\5.jpg"width="210px" height="110px">
+<img src="..\Mandie-Sumang_BSC-TRAINEE-EXAM\images\1.jpg"width="210px"height="110px">
+<img src="..\Mandie-Sumang_BSC-TRAINEE-EXAM\images\2.jpg" width="210px"height="110px">
+<img src="..\Mandie-Sumang_BSC-TRAINEE-EXAM\images\3.jpg"width="210px"height="110px">
+<img src="..\Mandie-Sumang_BSC-TRAINEE-EXAM\images\4.jpg"width="210px" height="110px">
+<img src="..\Mandie-Sumang_BSC-TRAINEE-EXAM\images\5.jpg"width="210px" height="110px">
 </div>
 
 
