--- a/MyAccountPage.html
+++ b/MyAccountPage.html
@@ -11,7 +11,7 @@ Profile
 
 
 	<div class="profbox">
-<img class="imahe" src="bgc.jpg" alt="Avatar">
+<img class="imahe" src="..\Mandie-Sumang_BSC-TRAINEE-EXAM\images\bgc.jpg" alt="Avatar">
 <h1>Sakalam OpenMinded</h1>
 <table>
 	<tr>
@@ -41,7 +41,7 @@ Profile
 <p>asdasdasdasdasd<p>
 </div>
 
-
+<p>
 
 
 
