--- a/Home.html
+++ b/Home.html
@@ -9,8 +9,11 @@ Home
 <body>
 
 <div class="babo">
+<p class="openshit">Open Minded kaba?</p>
+  <a href="" >Help</a>
 
-  <a href="MyAccountPage.html" >My Account</a>
+    <a href="" >About</a>
+      <a href="MyAccountPage.html" >My Account</a>
 </div>
 <br>
 
@@ -21,7 +24,7 @@ Home
 <h1> Trending Searches</h1>
 <h1> Flash Deals</h1>
 <h1> Categories</h1>
-<ul>
+<ul class="list">
  <a href=""><li>Men's Apparel</li></a>
  <a href=""><li>Mobiles & Gadgets</li></a>
  <a href=""><li>Mobiles Accessories</li></a>
@@ -32,8 +35,24 @@ Home
  <a href=""><li>Women's Bags</li></a>
  <a href=""><li>Women Accessories</li></a>
  <a href=""><li>Women's Apparel</li></a>
+
+
+
+
+
+ <br>
+
+ <br>
+
+
+
+
+
 </ul>
+<a class="outbut" href="CheckoutPage.html"> Checkout</a>
+
 </div><div class="itemcont">
+
 <div class="box_cat2">
 <img src="..\Mandie-Sumang_BSC-TRAINEE-EXAM\images\1.jpg"width="210px"height="110px">
 <img src="..\Mandie-Sumang_BSC-TRAINEE-EXAM\images\2.jpg" width="210px"height="110px">
