--- a/MyAccountPage.html
+++ b/MyAccountPage.html
@@ -29,19 +29,78 @@ Profile
 	</tr><tr>
 	<td>Sessions : 14 </td>
 </tr></table>
-
-
-
 </div>
+
 
 
 <div class="reviewbox">
 
 <h1>Activity</h1>
-<p>asdasdasdasdasd<p>
+<h3 class="ords">Orders</h3>
+<ul class="ordslist">
+<li>#653 October 21, 2019 - 01:23<b> Completed</b></li>
+<br>
+<li>#643 November 2, 2019 - 12:21<b> Completed</b></li>
+<br>
+<li>#123 December 18, 2019 - 7:12<b> To Recieved</b></li>
+</ul>
+
+
+<br>
+
+<div class="seperator">
+ 
 </div>
 
-<p>
+
+<br>
+<h3>Wishlist</h3>
+
+
+<ul class="ordslist">
+<li>Charging Station</li>
+<br>
+<li>Analogue</li>
+<br>
+<li>Wooden Phone</li>
+</ul>
+
+
+
+<div class="seperator">
+ 
+</div>
+
+<h3>Reviews</h3>
+
+<h4>10,000 stars for handsome rider</h4>
+
+
+
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -59,6 +118,41 @@ Profile
 
   <input class="noteclass" type="text" id="note" ><br><br>	
 <button class="notbut">Add Notes</button>
+<br><br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<a class="outbut" href="CheckoutPage.html">Checkout</a>
+
+
+
 </div>
 </div
 
